# domain_watcher

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: linkcheck-failure.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs-linkcheck.yml  docs.yml  pre-commit-autoupdate.yml  release.yml
docker/: Dockerfile  compose.yml  example-config.yaml
docs/: README.md  conf.py  index.md
docs/architecture/: 0001-overview.md  0002-bounded-contexts.md  0003-config-schema.md  0004-plugin-protocol.md  0005-bot-integration.md  0006-runtime-llm-fallback.md
docs/guides/integrator/: embedding.md
docs/guides/operator/: configuration.md  docker.md  learned-rules.md  quickstart.md
docs/plans/: 2026-05-09-domain-watcher.md
docs/reference/: api.md  cli.md  plugins.md
src/domain_watcher/: __init__.py  composition.py
src/domain_watcher/adapters/: __init__.py
src/domain_watcher/application/: channel_resolver.py  event_bus.py  metrics_subscriber.py  scheduling.py  unit_of_work.py
src/domain_watcher/application/services/: parsing_service.py  revalidation_service.py
src/domain_watcher/application/use_cases/: check_domain.py  dispatch_notifications.py  reload_config.py
src/domain_watcher/core/checking/: events.py  policies.py  ports.py  value_objects.py
src/domain_watcher/core/monitoring/: entities.py  events.py  ports.py  value_objects.py
src/domain_watcher/core/notification/: entities.py  events.py  policies.py  ports.py
src/domain_watcher/core/parsing/: events.py  ports.py  value_objects.py
src/domain_watcher/core/shared/: errors.py  events.py  ports.py  time_provider.py  value_objects.py
src/domain_watcher/infrastructure/: _http.py  registry.py
src/domain_watcher/infrastructure/checkers/: __init__.py  _iana_bootstrap.py  _whois_with_parser.py  rdap.py  script.py  whois.py
src/domain_watcher/infrastructure/config/: _duration_field.py  loader.py  schema.py  watcher.py
src/domain_watcher/infrastructure/notifiers/: discord.py  email_smtp.py  telegram.py  webhook.py
src/domain_watcher/infrastructure/observability/: __init__.py  metrics.py  structlog_setup.py
src/domain_watcher/infrastructure/parsers/: _metrics.py  _prompts.py  llm_suggester.py  regex.py  safety.py  validation_pipeline.py
src/domain_watcher/infrastructure/parsers/data/: known_good_domains.json
src/domain_watcher/infrastructure/persistence/memory/: __init__.py  idempotency.py  learned_rules.py  monitored.py
src/domain_watcher/infrastructure/persistence/sql/: __init__.py  orm.py  uow.py
src/domain_watcher/infrastructure/persistence/sql/migrations/: env.py
src/domain_watcher/infrastructure/persistence/sql/repos/: __init__.py  idempotency.py  learned_rules.py  monitored.py
src/domain_watcher/infrastructure/plugins/: __init__.py  discovery.py
src/domain_watcher/infrastructure/scheduling/: apscheduler.py
src/domain_watcher/interfaces/cli/: _check.py  _config.py  _rules.py  _run.py  _version.py  app.py
src/domain_watcher/testing/: __init__.py  clocks.py  repos.py
src/domain_watcher/testing/contract/: checker.py  notifier.py  repo.py
tests/: test_makefile_targets.py
tests/contracts/: test_notifier_contract.py  test_repository_contract.py
tests/e2e/: test_cli_run.py
tests/fixtures/config/: bad-cron.yaml  dup-id.yaml  missing-checker.yaml  unresolved-env.yaml  valid.yaml
tests/fixtures/fake_plugin/: pyproject.toml
tests/fixtures/fake_plugin/src/fake_dw_plugin/: __init__.py  notifier.py
tests/fixtures/llm/: CAPTURE.md  auth_failure.json  bad_json_response.json  missing_capture_group.json  unknown_tld_ok.json
tests/fixtures/scripts/: bad-json.sh  ok.sh  slow.sh  transient.sh
tests/fixtures/whois/: CAPTURE.md  example.app.txt  example.co.uk.txt  example.com.txt  example.io.txt  example.ru.txt
tests/integration/: test_composition.py
tests/integration/parsing/: test_parsing_with_real_llm.py  test_parsing_with_recorded_llm.py
tests/integration/plugins/: test_discovery_real.py
tests/lint/: test_no_any_in_core.py
tests/unit/: test_public_api.py
tests/unit/application/: _fakes.py  test_channel_resolver.py  test_check_domain.py  test_dispatch_notifications.py  test_event_bus.py  test_parsing_service.py  test_reconcile.py  test_reload_config.py  test_revalidation.py  test_scheduling_port.py  test_uow.py
tests/unit/core/checking/: test_events.py  test_policies.py  test_ports.py  test_value_objects.py
tests/unit/core/monitoring/: test_entities.py  test_events.py  test_ports.py  test_value_objects.py
tests/unit/core/notification/: _fakes.py  test_entities.py  test_events.py  test_idempotency.py  test_policies.py  test_ports.py
tests/unit/core/parsing/: test_events.py  test_ports.py  test_value_objects.py
tests/unit/core/shared/: test_errors.py  test_time_provider.py  test_value_objects.py
tests/unit/infrastructure/: test_registry.py
tests/unit/infrastructure/checkers/: test_iana_bootstrap.py  test_rdap.py  test_script.py  test_whois.py  test_whois_with_parser.py
tests/unit/infrastructure/config/: test_loader.py  test_schema.py  test_watcher.py
tests/unit/infrastructure/notifiers/: test_discord.py  test_email.py  test_telegram.py  test_webhook.py
tests/unit/infrastructure/observability/: test_metrics.py  test_metrics_subscriber.py
tests/unit/infrastructure/parsers/: test_llm_suggester.py  test_regex.py  test_safety.py  test_validation_pipeline.py
tests/unit/infrastructure/persistence/: test_alembic_smoke.py
tests/unit/infrastructure/persistence/memory/: test_idempotency.py  test_learned_rules.py  test_monitored.py
tests/unit/infrastructure/plugins/: test_discovery.py
tests/unit/infrastructure/scheduling/: test_apscheduler.py  test_revalidation_job.py
tests/unit/interfaces/: test_library_api.py
tests/unit/interfaces/cli/: test_app.py
tests/unit/testing/: test_contracts_run_clean.py
(+1 files in other folders)
