[project]
name = "domain-watcher"
version = "0.1.0"
description = "Periodic domain expiration checker — RDAP/WHOIS/script with multi-channel alerts."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Aryn Y.", email = "aryn@sek.su" },
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-whois>=0.9",
    "litellm>=1.40",
    "aiosmtplib>=3.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "watchdog>=4",
    "apscheduler>=3.10",
    "typer>=0.12",
    "structlog>=24",
    "prometheus-client>=0.20",
    "aiohttp>=3.9",
]

[project.scripts]
domain-watcher = "domain_watcher.interfaces.cli.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "ty>=0.0.1a8",
    "import-linter>=2.0",
]


integration = [
    "testcontainers[postgresql]>=4.7",
    "psycopg[binary]>=3.2",
]

docs = [
    "sphinx>=7.3",
    "myst-parser>=3.0",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6",
    "linkify-it-py>=2.0",
    # Required to import ``domain_watcher.testing`` for autodoc — the
    # contract harnesses (CheckerContractTest, RepoContractTest, …) are
    # part of the documented public surface and import pytest at load.
    "pytest>=8",
]

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",     # Pyflakes rules for logical errors

    # pycodestyle
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings

    # isort
    "I",     # Import sorting and organization

    # pep8-naming
    "N",     # PEP 8 naming conventions

    # pyupgrade
    "UP",    # Modern Python syntax upgrades

    # flake8-bugbear
    "B",     # Common bugs and design problems

    # flake8-simplify
    "SIM",   # Code simplification suggestions

    # flake8-comprehensions
    "C4",    # List/dict/set comprehension improvements

    # bandit (security)
    "S",     # Security vulnerability detection

    # flake8-annotations
    "ANN",   # Type annotation enforcement

    # flake8-async
    "ASYNC", # Async/await usage best practices

    # flake8-logging-format
    "G",     # Logging format and best practices

    # Pylint
    "PL",    # Pylint rules for code quality

    # Ruff-specific rules
    "RUF",   # Ruff-specific improvements
]

[tool.ruff.lint.per-file-ignores]
# typer's API requires call-site defaults like ``= typer.Option(...)``.
"src/domain_watcher/interfaces/cli/**/*.py" = ["B008", "TC001", "TC003"]
# Library façade & composition root mix runtime + type-only deps from
# many bounded contexts; spawning a TYPE_CHECKING block per import
# obscures the dependency surface for no run-time gain.
"src/domain_watcher/interfaces/library/**/*.py" = ["TC001", "TC003"]
"src/domain_watcher/composition.py" = ["TC001", "TC003"]
# The contract harness ships under src/ but executes as a test framework:
# ``assert`` is the assertion mechanism and the ``Any``-typed ``make_*``
# helpers exist precisely so adapters can inject arbitrary fixtures.
"src/domain_watcher/testing/**/*.py" = ["S101", "ANN401"]
# Tests use pathlib synchronously inside async test functions; the rule
# only matters for trio/anyio runtimes which we don't target.
# Tests also don't need the full annotation/security/magic-value ceremony
# the rest of the codebase does — assert is the assertion mechanism,
# fake credentials are the point of fixtures, and "5 == len(things)"
# is a clearer intent than introducing a named constant.
"tests/**/*.py" = [
    "ASYNC240", "TC001", "TC003",
    "S101",                                  # assert is the test framework
    "S105", "S106", "S107",                  # fake credentials in fixtures
    "S603", "S607",                          # subprocess in test infra
    "PLR2004",                               # literal comparisons in tests
    "PLR0913",                               # fixtures take many parameters
    "PLC0415",                               # localized imports for isolation
    "PLW0108",                               # explicit lambdas read clearer
    "ANN001", "ANN201", "ANN202", "ANN401",  # tests don't need annotations
    "N802", "N806",                          # test names mirror SUT shape
]
"conftest.py" = ["ANN001", "PLR2004"]
# Sphinx config has one long ``release = tomllib.loads(...)`` expression
# that the formatter chooses not to wrap; fixing it would obscure intent.
"docs/conf.py" = ["E501"]

[tool.ty]
# ty is the Astral type checker (mypy successor). Configure rules
# explicitly; "strict" semantics emulated via per-rule severities.
environment.root = ["src", "tests"]
environment.python-version = "3.12"
rules.possibly-unresolved-reference = "error"
rules.unused-ignore-comment = "warn"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers --cov=domain_watcher --cov-report=term-missing --cov-report=xml"
markers = [
    "integration: tests requiring external services (Docker, network, etc.)",
    "flaky: tests that may need rerun on transient failure (live LLM, etc.)",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/domain_watcher"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
