[project]
name = "fake-dw-plugin"
version = "0.1.0"
description = "Fake plugin for domain_watcher discovery integration test."
requires-python = ">=3.12"

[project.entry-points."domain_watcher.notifiers"]
fake = "fake_dw_plugin.notifier:FakeNotifier"

[project.entry-points."domain_watcher.metadata"]
protocol_version = "fake_dw_plugin:PROTOCOL_VERSION"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
